<resources>
    <string name="app_name">ST25</string>
    <string name="www_st_com">www.st.com</string>
    <string name="st_uri">st.com</string>
    <string name="app_description">
        ST25 NFC App is an Android application dedicated to handle the ST NFC tag ST25TA (CLOUD ST25TA02K-P), the dynamic NFC tag M24SR (M24SR Nucleo shield and M24SR Discovery boards), the Dual Interface EEPROMs of the M24LRxx family, and the ST25DV series Dynamic NFC Tags. \n
        It allows the user to store or read NDEF messages such as NDEF URL, SMS, Email, vCard (including picture), AAR and proprietary messages. \n
        NDEF Multi-records is also available. \n
        Specific demonstration features such as FW update, image transfers are available and work with specific firmware and Discovery kits. \n
    </string>
    <string name="about">About</string>
    <string name="version_dialog_header">"App version description</string>
    <string name="preferred_app">Preferred App.</string>
    <string name="preferred_applications">Preferred Applications</string>
    <string name="preferred_application_description">List of \'preferred applications\' associated to sytem actions.\n\nClick on Edit icon if you want to remove an association. When the action occurs, if no more preferred application is associated to this action, Android will display a popup asking the user to choose what to do.</string>
    <string name="show_only_nfc_actions">Show only NFC actions</string>
    <string name="show_all_actions">Show all actions</string>
    <string name="action">Action</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="not_implemented_yet">Not implemented yet!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="product_unknown">Product unknown</string>
    <string name="product_version">Product version</string>
    <string name="action_settings">Settings</string>
    <string name="please_tap_a_nfc_tag">Please tap an NFC tag...</string>
    <string name="aiddescription">aiddescription</string>
    <string name="servicedesc">servicedesc</string>
    <string name="ndef">NDEF</string>
    <string name="ndef_details">ndef details</string>
    <string name="no_ndef_data_or_unknown_data">No NDEF data or unknown data</string>
    <string name="unknown_data">Unknown data</string>
    <string name="area_protected_in_read">Area protected in read</string>
    <string name="area_protected_in_read_click_here_to_unlock">Area protected in read. Click here to unlock it.</string>
    <string name="error_while_reading_the_area">Error while reading the area</string>
    <string name="error_no_password_interface">Error! This tag doesn\'t have a password interface!</string>
    <string name="cc_file">CC File</string>
    <string name="system_file">System File</string>
    <string name="system_file_length">System file length</string>
    <string name="tools">Tools</string>
    <string name="memory">Memory</string>
    <string name="memory_content">Memory Content</string>
    <string name="configuration">Configuration</string>
    <string name="area_security_status">Area Security Status</string>
    <string name="storage_format_id">Storage Format ID</string>
    <string name="nfc_forum">NFC Forum</string>
    <string name="ndef_editor">Ndef Editor</string>
    <string name="areas_content_editor">Areas Content Editor</string>
    <string name="tag_info">Tag Info</string>
    <string name="product_features">Product Features</string>
    <string name="cc_file_length_title">CC File Length</string>
    <string name="lri_menus">LRi menus</string>
    <string name="lriS2k_menus">LRiS2k menus</string>
    <string name="lriS64k_menus">LRiS64k menus</string>
    <string name="st25tv_menus">ST25TV menus</string>
    <string name="st25dv02kw_menus">ST25DV02K-W menus</string>
    <string name="m24sr64_menus">M24sr64 menus</string>
    <string name="m24lr64_menus">M24lr64 menus</string>
    <string name="m24lr04_menus">M24lr04 menus</string>
    <string name="st25ta_menus">ST25ta menus</string>
    <string name="type5_menus">Type5 menus</string>
    <string name="type4_menus">Type4 menus</string>
    <string name="iso15693_menus">ISO15693 menus</string>
    <string name="pwm_access_rights">Pwm R/W access rights</string>
    <string name="pwm_control_config">Pwm Ctrl config</string>
    <string name="pwm_control_settings"> Pwm Ctrl settings</string>
    <string name="pwm1Drive">Pwm1 Drive</string>
    <string name="pwm2Drive">Pwm2 Drive</string>
    <string name="select_pwm_output_trimming">Select output driver trimming</string>
    <string name="select_pwm_duality_management">Select pwm duality management</string>
    <string name="select_pwm">Select pwm drive</string>
    <string name="full_power">Full power</string>
    <string name="half_power">Half power</string>
    <string name="one_quarter_power">One quarter power</string>
    <string name="three_quarter_power">Three quarter power</string>
    <string name="trimming_value">Trimming value</string>
    <string name="change_pwm_drive_configuration">Change pwm drive configuration</string>
    <string name="change_duality_management">Change pwm duality management</string>
    <string name="full_duplex">Full duplex</string>
    <string name="freq_reduced">Freq reduced</string>
    <string name="full_power_while_rf_cmd">1/4 Full power during RF cmds</string>
    <string name="pwm_set_in_hz_while_rf_cmd">PWM set in HZ during RF cmds</string>
    <string name="one_quarter_full_power_while_rf_cmd">PWM @ 1/4 full power during RF cmds</string>
    <string name="freq_reduced_and_one_quarter_full_power_while_rf_cmd"> Freq reduced and PWM @ 1/4 full power during RF cmds</string>
    <string name="unknown_mgt">Unknown management</string>
    <string name="access_rights">Access rights</string>
    <string name="area_security_status_management">Areas Security Status</string>
    <string name="security_status_management">Security Status</string>
    <string name="passwd_management">Password Management</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter current password </string>
    <string name="enter_new_password">Enter new password</string>
    <string name="passwordless">No Password </string>
    <string name="password1">Password 1</string>
    <string name="password2">Password 2</string>
    <string name="password3">Password 3</string>
    <string name="enter_read_password">Enter read password</string>
    <string name="enter_write_password">Enter write password</string>
    <string name="enter_new_read_password">Enter new read password</string>
    <string name="enter_new_write_password">Enter new write password</string>
    <string name="area_management">Areas Management</string>
    <string name="sector_management">Sector Management</string>
    <string name="Sector">Sector</string>
    <string name="value_of_the_current_sector"> Value of the current sector</string>
    <string name="memory_test">Memory tests</string>
    <string name="unknown_tag">Tag unknown</string>
    <string name="no_tag">No tag detected</string>
    <string name="unknown_state">State unknown</string>
    <string name="read_lock">Read lock</string>
    <string name="write_lock">Write lock</string>
    <string name="read_unlock">Read unlock</string>
    <string name="write_unlock">Write unlock</string>
    <string name="write_lock_permanent">Write lock permanently</string>
    <string name="permanent_lock">Permanent lock</string>
    <string name="change_read_pwd">Change read password</string>
    <string name="change_write_pwd">Change write password</string>
    <string name="present_read_pwd">Present read password</string>
    <string name="present_write_pwd">Present write password</string>
    <string name="present_config_pwd">Present configuration password</string>
    <string name="change_config_pwd">Change configuration password</string>
    <string name="lock_configuration">Lock configuration</string>
    <string name="select_an_action">Select an action:</string>
    <string name="edit_ndef_record">Edit this NDEF Record</string>
    <string name="delete_ndef_record">Delete this NDEF Record</string>
    <string name="insert_ndef_record">Insert a NDEF Record</string>
    <string name="update_ndef_record">Update this NDEF Record</string>
    <string name="zones_viewer">Zones viewer</string>
    <string name="ndefs_viewer">NDEF(s) viewer</string>
    <string name="model_description">Model Description</string>
    <string name="model_type">Model Type</string>
    <string name="st25dv_menus">ST25DV menus</string>
    <string name="desc" translatable="false">placeholder</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="Memory_size">Memory size (bytes):</string>
    <string name="Tech_list">Tech list</string>
    <string name="InformationRetrievalOnGoing">Information retrieval on going ....Please keep reader close to the tag.</string>
    <string name="UID">UID</string>
    <string name="DSFID">DSFID</string>
    <string name="AFI">AFI</string>
    <string name="CCLEN">CCLEN (bytes):</string>
    <string name="CCFileNotAvailable">CC File not available</string>
    <string name="read_memory">Read Memory</string>
    <string name="write_memory">Write Memory</string>
    <string name="dump_memory_to_file">Dump memory to file</string>
    <string name="fill_memory_from_file">Fill memory from file</string>
    <string name="erase_memory">Erase memory</string>
    <string name="Magic_Number">Magic Number : 0x</string>
    <string name="Mapping_Version">Mapping Version : 0x</string>
    <string name="Read_access">Read access :</string>
    <string name="Write_access">Write access :</string>
    <string name="MaxRAPDU">Max Read APDU size</string>
    <string name="MaxCAPDU">Max Write APDU size</string>
    <string name="From">From</string>
    <string name="byte_address">Byte address:</string>
    <string name="start_address">Start address:</string>
    <string name="start_address2">Start address</string>
    <string name="stop_address">Stop address</string>
    <string name="number_of_blocks">Number of blocks</string>
    <string name="number_of_bytes">Number of Bytes:</string>
    <string name="lock_blocks">Lock Block(s)</string>
    <string name="counter">Counter</string>
    <string name="tamper_detect">Tamper Detect</string>
    <string name="confidential_mode">Confidential Mode</string>
    <string name="kill_tag">Kill Tag</string>
    <string name="electronic_article_surveillance">Electronic Article Surveillance</string>
    <string name="Mailbox_management">Mailbox Management</string>
    <string name="data_transfer">Data Transfer</string>
    <string name="dynamic_register_management">Dyn Register Management</string>
    <string name="register_management">Register Management</string>
    <string name="chronometer_demo">Stopwatch Transfers</string>
    <string name="picture_transfers">Picture Transfers</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="configuration_protection">Configuration Protection</string>
    <string name="counter_configuration">Counter Configuration</string>
    <string name="lock_counter">Lock Counter</string>
    <string name="counter_mode">Counter Mode</string>
    <string name="enable_counter">Enable Counter</string>
    <string name="no_counter_available">Counter not available</string>
    <string name="current_counter_value">Current counter value</string>
    <string name="update_counter_mode">Update Counter Mode</string>
    <string name="gpo_status_management">GPO status</string>
</resources>