<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="M24SR Features"
        android:id="@+id/m24sr_features">
        <menu>
            <item
                android:id="@+id/sys_file"
                android:icon="@drawable/ic_perm_data_setting_black_24dp"
                android:title="@string/system_file"/>
            <item
                android:id="@+id/memory_dump"
                android:icon="@drawable/ic_memory_black_24dp"
                android:title="@string/memory_content"/>

            <item
                android:id="@+id/area_management"
                android:icon="@drawable/ic_memory_black_24dp"
                android:title="@string/area_management"/>
            <item
                android:id="@+id/areas_ndef_editor"
                android:icon="@drawable/ic_playlist_play_black_24dp"
                android:title="@string/areas_content_editor" />
            <item
                android:id="@+id/area_security_status_management"
                android:icon="@drawable/ic_security_black_24dp"
                android:title="@string/area_security_status_management"/>
            <item
                android:id="@+id/gpo_status_management"
                android:icon="@drawable/ic_call_missed_outgoing_black_24dp"
                android:title="@string/gpo_status_management"/>
        </menu>
    </item>


</menu>
