<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".type4.st25ta.CounterConfigActivity">

    <TextView
        android:id="@+id/counterConfHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/counter_configuration"
        android:textSize="15dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Switch
        android:id="@+id/enableCounterSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counterConfHeaderTextView"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/enable_counter"
        android:textColor="@color/st_dark_blue"
        android:textSize="15dp"
        android:textStyle="bold" />


    <Switch
        android:id="@+id/lockCounterSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enableCounterSwitch"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/lock_counter"
        android:textColor="@color/st_dark_blue"
        android:textSize="15dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/counterValueLayout"
        android:layout_below="@+id/lockCounterSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/counterValueCaptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/current_counter_value"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="8"/>

        <TextView
            android:id="@+id/counterValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/counterReadWriteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/counter_mode"
        android:layout_below="@+id/counterValueLayout"
        android:textSize="15dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <RadioGroup
        android:id="@+id/counterReadWriteRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counterReadWriteTextView"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" >
    </RadioGroup>

    <Button
        android:id="@+id/updateRWButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counterReadWriteRadioGroup"
        android:text="@string/update_counter_mode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/counterNotAvailableView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/updateRWButton"
        android:layout_marginTop="10dp"
        android:text="@string/no_counter_available"
        android:textSize="15dp"
        android:textStyle="bold"
        android:typeface="serif"/>
</RelativeLayout>
